syntax="proto3";
package main;
option go_package = ".;filepc";

service Explorer {
  rpc GetFile(FileRequest) returns (FileResponse) {}
}
message FileRequest {
  string filename = 1;
  string extension = 2;
}
message FileResponse {
  string filename = 1;
  bytes content = 2;
}
